# terraform-agent

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agent_input_parser.py  app.py  aws_cost_estimator.py  check_install.py  docker-compose.yml  generated.tf  main.tf  pyproject.toml  readme_generator.py  req.json  setup.cfg  test.ipynb  test.py  test_script.py  tfplan.binary  tfplan.json
.github/workflows/: ci.yml
chat_data/: chat_oai-0072f7de.json  chat_oai-0252ec0b.json  chat_oai-0932e851.json  chat_oai-0ce7edea.json  chat_oai-14993e75.json  chat_oai-14c3848a.json  chat_oai-1aee6fbc.json  chat_oai-21542e79.json  chat_oai-27c959d3.json  chat_oai-2801ba18.json  chat_oai-2f00f4dd.json  chat_oai-31b360b7.json  chat_oai-3909cb0e.json  chat_oai-4dfb6731.json  chat_oai-4e0078b6.json  chat_oai-53a46e29.json  chat_oai-546e209b.json  chat_oai-5a63c7ec.json  chat_oai-5cd5cd7d.json  chat_oai-61b3168f.json  chat_oai-666cd5e6.json  chat_oai-6b198a4b.json  chat_oai-729f7bc3.json  chat_oai-74519aa2.json  chat_oai-79ca09d6.json  chat_oai-83579a5a.json  chat_oai-8baf954a.json  chat_oai-8e6fe07b.json  chat_oai-91f5d640.json  chat_oai-94faac29.json  chat_oai-96440f88.json  chat_oai-96a6a9eb.json  chat_oai-9e8c0880.json  chat_oai-a1247728.json  chat_oai-a2585226.json  chat_oai-a456f024.json  chat_oai-abee8065.json  chat_oai-ad9763ab.json  chat_oai-b2a179f2.json  chat_oai-b61c840f.json  (+13 more)
infra/: main.tf
src/: .dockerignore  .env  .env.example  Dockerfile  README.md  budgets.json  main.py  requirements.txt
src/chat_data/: chat_044c9aeb-6d01-4b9b-909d-2817c264a8d4.json  chat_1c03339c-d217-4022-83df-cb69377d44c1.json  chat_22d833b8-a5dc-47d6-9d4c-11ce1a6cbdf6.json  (+72 more)
(+25 files in other folders)
